--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
           <br />
           <br />
           <p>
-            Your 4-digit verification code is 7368. Kindly click on the link and
-            enter the above code to verify your account.
+            Your 4-digit verification code is 7368. Kindly click on this
+            <a href="#">link</a> and enter the above code to verify your
+            account.
           </p>
           <br />
           <br />
