--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
         text-align: center;
       }
       .table-cont table {
-        border: 1px solid #000;
-        padding: 3px;
+        border: 0.1px solid #000;
+        background-color: #000;
       }
       .table-cont td {
-        border: 1px solid #000;
+        border: 0.1px solid #000;
+        background-color: #fff;
         padding: 3px 10px;
       }
       @media all and (max-width: 545px) {
