--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
           flex-direction: column;
           row-gap: 15px;
         }
+        .table-cont {
+          font-size: 14px;
+        }
       }
     </style>
   </head>
